--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,16 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <ul>
+      <% for(let message of messages) { %>
+        <li>
+          <section>
+            <h4><%= message.user %></h4>
+            <p><%= message.text %></p>
+            <p><%= message.add %></p>
+          </section>
+        </li>
+        <% } %>
+    </ul>
   </body>
 </html>
