new message input now has user and text input area

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,7 +1,12 @@
-<h2>yo</h2>
+<h2>New Message</h2>
 <form method="POST" action="/new">
-    <label for="newMessage">New Message
-        <input type="text" name="newMessage" id="newNessage">
+    <label for="user">User
+        <input type="text" name="user" id="user">
     </label>
+
+    <label for="newText">New Text
+        <input type="text" name="newText" id="newText">
+    </label>
+    
     <button>enter</button>
 </form>
